WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292531
REGRESSION(
294462@main
): UI process may crash with 'NSInvalidArgumentException': -[WKPDFPageNumberIndicator canUseVisualEffectViewForBackdrop] :: unrecognized selector
https://bugs.webkit.org/show_bug.cgi?id=292531
Summary
REGRESSION(294462@main): UI process may crash with 'NSInvalidArgumentExceptio...
Abrar Rahman Protyasha
Reported
2025-05-05 03:55:41 PDT
rdar://150637116
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-05-05 04:02:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44928
Abrar Rahman Protyasha
Comment 2
2025-05-05 11:02:11 PDT
***
Bug 292553
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2025-05-05 11:03:21 PDT
Committed
294516@main
(3e090482f9ab): <
https://commits.webkit.org/294516@main
> Reviewed commits have been landed. Closing PR #44928 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug